--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Group3101Madrid</string>
+    <string name="app_name">Group3101Madrid</string>
+    <string name="email">Correo Electrónico</string>
+    <string name="contrasenia">Contraseña</string>
+    <string name="repetir_contrase_a">Repetir contraseña</string>
+    <string name="culture_icon">Culture Icon</string>
+    <string name="experencias_culturales">Experencias culturales</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="crea_tu_cuenta">Crea tu cuenta</string>
+    <string name="terminos">He leído y acepto la Política de Privacidad y los Términos y Condiciones.</string>
+    <string name="crear_cuenta">Crear cuenta</string>
+
 </resources>
